[package]
name = "enfire"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
async-trait = "0.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"

prost = "0.13.3"
prost-types = "0.13.3"
futures-core = "0.3.31"
async-stream = "0.3.6"
tokio-stream = "0.1.17"

[build-dependencies]
fs_extra = "1.3.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
tonic-build = "0.12.3"
zip = "2.4.2"
